--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,7 @@
     &__link {
         scroll-behavior: smooth;
     }
-    &__btn {
+    &__link-btn {
         width: 247px;
         height: 66px;
         box-sizing: border-box;
@@ -50,7 +50,7 @@
         text-align: center;
         transition: all 0.5s;
     }
-    &__btn:hover {
+    &__link-btn:hover {
         background-color: rgb(255, 255, 255);
         color: rgb(32, 32, 39);
         cursor: pointer;
@@ -67,11 +67,12 @@
 }
 
 .info {
-    height: 1470px;
+    height: 1420px;
     background: rgb(32, 32, 39);
     background-image: url(img/bg-games.png);
     background-repeat: no-repeat;
     background-position: -20% 10%;
+    padding-bottom: 50px;
     &__main-title {
         color: rgb(255, 255, 255);
         font-size: 64px;
@@ -158,3 +159,101 @@
 .small {
     height: 473px;
 }
+
+.game-play {
+    background: rgb(32, 32, 39);
+    border-top: 0.5px solid rgba(108, 106, 106, 0.803);
+    &__title {
+        font-size: 64px;
+        font-weight: 700;
+        line-height: 78px;
+        color: rgb(255, 255, 255);
+        padding-bottom: 72px;
+        padding-top: 46px;
+    }
+    &__flex {
+        display: flex;
+        flex-direction: column;
+        row-gap: 32px;
+    }
+    &__link {
+        text-decoration: none;
+        color: rgb(32, 32, 39); 
+        height: 0px;
+    }
+    &__product {
+        display: flex;
+        background-color: rgb(255, 255, 255);
+        border-radius: 30px;
+        transition: all 0.5s;
+    }
+    &__product:hover {
+        transform: scale(0.97);
+    }
+    &__box {
+        width: 600px;
+        height: 404px;
+        padding: 48px;
+
+    }
+    &__subtitle {
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 59px;
+        width: 504px;
+        
+    }
+    &__text {
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 32px;
+        padding-top: 24px;
+        padding-bottom: 36px;
+    }
+    &__btn {
+        width: 247px;
+        height: 66px;
+        box-sizing: border-box;
+        border: 1px solid rgb(32, 32, 39);
+        border-radius: 60px;
+        background: rgb(32, 32, 39);
+        color: rgb(255, 255, 255);
+        font-family: "Montserrat", sans-serif;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 141.69%;
+        text-align: center;
+        transition: all 0.5s;
+    }
+    &__btn:hover {
+        background-color: rgb(255, 255, 255);
+        color: rgb(32, 32, 39);
+        cursor: pointer;
+      }
+    &__img {
+        width: 600px;
+        height: 500px;
+    }
+}
+
+.margin {
+    margin-bottom: 144px;
+}
+
+.footer {
+    height: 150px;
+    background: rgb(189, 237, 53);
+    &__text {
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 29px;
+        text-align: center;
+        font-family: "Montserrat", sans-serif;
+        padding-top: 61px;
+    }
+}
+
+
+
+
+@import 'mobile'
