--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
   background: rgb(32, 32, 39);
   background-image: url(img/bg-games.png);
   background-repeat: no-repeat;
-  background-position: -20% 10%;
+  background-position: calc(50% + 100px) calc(50% - 270px);
   padding-bottom: 50px;
 }
 .info__main-title {
@@ -235,6 +235,11 @@
   height: 500px;
 }
 
+.img-mini-top {
+  background-image: url(mini-star-top.svg);
+  background-repeat: no-repeat;
+}
+
 .margin {
   margin-bottom: 144px;
 }
@@ -256,5 +261,63 @@
   .center {
     padding-left: 16px;
     padding-right: 16px;
+  }
+  .header__title {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 49px;
+    text-align: center;
+  }
+  .header__subtitle {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    padding-bottom: 36px;
+  }
+  .header__box {
+    display: flex;
+    justify-content: center;
+  }
+  .header__link-btn {
+    font-size: 16px;
+  }
+  .info {
+    display: none;
+  }
+  .game-play__title {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 49px;
+  }
+  .game-play__subtitle {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 39px;
+    width: 285px;
+  }
+  .game-play__text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+  }
+  .game-play__flex {
+    display: block;
+  }
+  .game-play__product {
+    display: block;
+  }
+  .game-play__img {
+    height: 285px;
+    width: 343px;
+    order: 1;
+  }
+  .game-play__box {
+    order: 2;
+    padding: 29.04px 29.04px 32.67px 29.04px;
+    width: 323px;
+  }
+  .margin {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
