--- a/style.css
+++ b/style.css
@@ -145,6 +145,26 @@
   padding-top: 16px;
 }
 
+.header__big-star {
+  display: none;
+}
+
+.header__mini-top-star {
+  display: none;
+}
+
+.header__big-top-star {
+  display: none;
+}
+
+.header__big-bottom-star {
+  display: none;
+}
+
+.header__mini-bottom-star {
+  display: none;
+}
+
 .small {
   height: 473px;
 }
@@ -181,7 +201,6 @@
 .game-play__link {
   text-decoration: none;
   color: rgb(32, 32, 39);
-  height: 0px;
 }
 .game-play__product {
   display: flex;
@@ -202,6 +221,10 @@
   font-weight: 700;
   line-height: 59px;
   width: 504px;
+  position: relative;
+}
+.game-play__mini-top-star {
+  position: absolute;
 }
 .game-play__text {
   font-size: 24px;
@@ -209,6 +232,10 @@
   line-height: 32px;
   padding-top: 24px;
   padding-bottom: 36px;
+  position: relative;
+}
+.game-play__mini-bottom-star {
+  position: absolute;
 }
 .game-play__btn {
   width: 247px;
@@ -235,6 +262,21 @@
   height: 500px;
 }
 
+.binding-big-top {
+  position: relative;
+}
+
+.game-play__big-top-star {
+  position: absolute;
+  right: 470px;
+  top: 2485px;
+}
+
+.game-play__mini-top-star {
+  right: 540px;
+  top: 2450px;
+}
+
 .img-mini-top {
   background-image: url(mini-star-top.svg);
   background-repeat: no-repeat;
@@ -247,6 +289,7 @@
 .footer {
   height: 150px;
   background: rgb(189, 237, 53);
+  position: relative;
 }
 .footer__text {
   font-size: 24px;
@@ -257,16 +300,39 @@
   padding-top: 61px;
 }
 
+.footer__mini-bottom-star {
+  position: absolute;
+  right: 560px;
+  bottom: 195px;
+}
+
+.footer__big-bottom-star {
+  position: absolute;
+  right: 462px;
+  bottom: 220px;
+}
+
 @media (max-width: 767px) {
   .center {
     padding-left: 16px;
     padding-right: 16px;
+  }
+  .header {
+    background-image: none;
+    height: 649px;
   }
   .header__title {
     font-size: 40px;
     font-weight: 700;
     line-height: 49px;
     text-align: center;
+    position: relative;
+    padding-top: 147px;
+  }
+  .header__big-star {
+    position: absolute;
+    top: -100.43px;
+    right: -90px;
   }
   .header__subtitle {
     font-size: 16px;
@@ -274,6 +340,17 @@
     line-height: 20px;
     text-align: center;
     padding-bottom: 36px;
+    position: relative;
+  }
+  .header__mini-top-star {
+    position: absolute;
+    top: 64px;
+    left: 91px;
+  }
+  .header__big-top-star {
+    position: absolute;
+    top: 97px;
+    left: 37px;
   }
   .header__box {
     display: flex;
@@ -281,14 +358,46 @@
   }
   .header__link-btn {
     font-size: 16px;
+    position: relative;
+  }
+  .header__mini-bottom-star {
+    position: absolute;
+    bottom: 125px;
+    right: 86px;
+  }
+  .header__link-btn {
+    height: 55px;
+  }
+  .scroll-bar {
+    height: 51px;
+    position: relative;
+  }
+  .header__big-bottom-star {
+    position: absolute;
+    bottom: 79px;
+    right: 34px;
   }
   .info {
+    display: none;
+  }
+  .game-play {
+    padding-bottom: 49px;
+  }
+  .game-play__big-top-star {
+    display: none;
+  }
+  .game-play__mini-top-star {
     display: none;
   }
   .game-play__title {
     font-size: 40px;
     font-weight: 700;
-    line-height: 49px;
+    line-height: 48px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .game-play__flex {
+    row-gap: 24px;
   }
   .game-play__subtitle {
     font-size: 32px;
@@ -300,24 +409,36 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
-  }
-  .game-play__flex {
-    display: block;
+    padding-top: 16px;
+    padding-bottom: 32px;
+    max-width: 300px;
   }
   .game-play__product {
-    display: block;
+    flex-direction: column;
+    max-height: 100%;
   }
   .game-play__img {
     height: 285px;
     width: 343px;
-    order: 1;
+    max-width: 100%;
   }
   .game-play__box {
-    order: 2;
+    height: 243.7px;
     padding: 29.04px 29.04px 32.67px 29.04px;
-    width: 323px;
+    order: 2;
+    max-width: 343px;
+  }
+  .game-play__btn {
+    width: 285px;
+    height: 55px;
   }
   .margin {
+    display: none;
+  }
+  .footer__big-bottom-star {
+    display: none;
+  }
+  .footer__mini-bottom-star {
     display: none;
   }
 }/*# sourceMappingURL=style.css.map */
