--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@
 .game-play__link {
   text-decoration: none;
   color: rgb(32, 32, 39);
+  height: 500px;
 }
 .game-play__product {
   display: flex;
@@ -300,6 +301,14 @@
   padding-top: 61px;
 }
 
+.footer {
+  position: relative;
+}
+
+.footer__box-star {
+  background-image: url(mini-star-bottom.svg), url(big-star-bottom.svg);
+}
+
 .footer__mini-bottom-star {
   position: absolute;
   right: 560px;
@@ -314,8 +323,8 @@
 
 @media (max-width: 767px) {
   .center {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: calc(50% - 172px);
+    padding-right: calc(50% - 172px);
   }
   .header {
     background-image: none;
@@ -417,23 +426,26 @@
     flex-direction: column;
     max-height: 100%;
   }
+  .game-play__link {
+    height: auto;
+  }
   .game-play__img {
     height: 285px;
-    width: 343px;
+    width: 344px;
     max-width: 100%;
   }
   .game-play__box {
-    height: 243.7px;
+    height: 100%;
     padding: 29.04px 29.04px 32.67px 29.04px;
     order: 2;
-    max-width: 343px;
+    width: auto;
   }
   .game-play__btn {
     width: 285px;
     height: 55px;
   }
   .margin {
-    display: none;
+    margin: 0;
   }
   .footer__big-bottom-star {
     display: none;
