--- a/style.scss
+++ b/style.scss
@@ -199,6 +199,7 @@
     &__link {
         text-decoration: none;
         color: rgb(32, 32, 39); 
+        height: 500px;
     }
     &__product {
         display: flex;
@@ -301,6 +302,14 @@
         font-family: "Montserrat", sans-serif;
         padding-top: 61px;
     }
+}
+
+.footer {
+    position: relative;
+}
+
+.footer__box-star {
+    background-image: url(mini-star-bottom.svg), url(big-star-bottom.svg);
 }
 
 .footer__mini-bottom-star {
