--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,7 @@
     &__link {
         scroll-behavior: smooth;
     }
-    &__link-btn {
+    &__btn {
         width: 247px;
         height: 66px;
         box-sizing: border-box;
@@ -50,7 +50,7 @@
         text-align: center;
         transition: all 0.5s;
     }
-    &__link-btn:hover {
+    &__btn:hover {
         background-color: rgb(255, 255, 255);
         color: rgb(32, 32, 39);
         cursor: pointer;
