--- a/style.css
+++ b/style.css
@@ -32,9 +32,6 @@
   line-height: 32px;
   padding-bottom: 48px;
 }
-.header__link {
-  scroll-behavior: smooth;
-}
 .header__link-btn {
   width: 247px;
   height: 66px;
@@ -47,9 +44,11 @@
   font-size: 24px;
   font-weight: 600;
   line-height: 141.69%;
-  letter-spacing: 0%;
   text-align: center;
   transition: all 0.5s;
+  padding: 15px 20px;
+  text-decoration: none;
+  display: inline-block;
 }
 .header__link-btn:hover {
   background-color: rgb(255, 255, 255);
@@ -184,6 +183,17 @@
 .game-play {
   background: rgb(32, 32, 39);
   border-top: 0.5px solid rgba(108, 106, 106, 0.803);
+  position: relative;
+}
+.game-play__big-top-star {
+  position: absolute;
+  right: calc(100vh - 630px);
+  top: 126px;
+}
+.game-play__mini-top-star {
+  position: absolute;
+  right: calc(100vh - 532px);
+  top: 93px;
 }
 .game-play__title {
   font-size: 64px;
@@ -217,10 +227,6 @@
   font-weight: 700;
   line-height: 59px;
   width: 504px;
-  position: relative;
-}
-.game-play__mini-top-star {
-  position: absolute;
 }
 .game-play__text {
   font-size: 24px;
@@ -228,10 +234,6 @@
   line-height: 32px;
   padding-top: 24px;
   padding-bottom: 36px;
-  position: relative;
-}
-.game-play__mini-bottom-star {
-  position: absolute;
 }
 .game-play__btn {
   width: 247px;
@@ -258,27 +260,6 @@
   height: 500px;
 }
 
-.binding-big-top {
-  position: relative;
-}
-
-.game-play__big-top-star {
-  position: absolute;
-  right: calc(100vh - 630px);
-  top: 2485px;
-}
-
-.game-play__mini-top-star {
-  position: absolute;
-  right: calc(100vh - 532px);
-  top: 2450px;
-}
-
-.img-mini-top {
-  background-image: url(mini-star-top.svg);
-  background-repeat: no-repeat;
-}
-
 .margin {
   margin-bottom: 144px;
 }
@@ -288,6 +269,16 @@
   background: rgb(189, 237, 53);
   position: relative;
 }
+.footer__mini-bottom-star {
+  position: absolute;
+  right: calc(100vh - 532px);
+  bottom: 180px;
+}
+.footer__big-bottom-star {
+  position: absolute;
+  right: calc(100vh - 630px);
+  bottom: 210px;
+}
 .footer__text {
   font-size: 24px;
   font-weight: 600;
@@ -295,22 +286,6 @@
   text-align: center;
   font-family: "Montserrat", sans-serif;
   padding-top: 61px;
-}
-
-.footer {
-  position: relative;
-}
-
-.footer__mini-bottom-star {
-  position: absolute;
-  right: calc(100vh - 532px);
-  bottom: 180px;
-}
-
-.footer__big-bottom-star {
-  position: absolute;
-  right: calc(100vh - 630px);
-  bottom: 210px;
 }
 
 @media (max-width: 767px) {
