--- a/_mobile.scss
+++ b/_mobile.scss
@@ -61,8 +61,14 @@
         right: 86px;
     }
 
+    .header__link-box {
+        display: flex;
+        justify-content: center;
+    }
+
     .header__link-btn {
         height: 55px;
+        width: 285px;
     }
 
     .scroll-bar {
