Изменил верхушку mobile.scss

--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,4 +1,4 @@
-@media (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) {
     .center {
         padding-left: calc(50% - 172px);
         padding-right: calc(50% - 172px);
