--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@
   padding-top: 61px;
 }
 
-@media (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .center {
     padding-left: calc(50% - 172px);
     padding-right: calc(50% - 172px);
