--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,6 @@
     }
     &__link-btn {
         width: 247px;
-        height: 66px;
         box-sizing: border-box;
         border: 1px solid rgb(32, 32, 39);
         border-radius: 60px;
@@ -55,6 +54,14 @@
         cursor: pointer;
       }
 }
+
+.header__link-btn-tablet {
+    display: none;
+  }
+
+  .header__link-btn-mobile {
+    display: none;
+  }
 
 .scroll-bar {
     height: 90px;
