--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@
 }
 
 .scroll-bar {
+  max-width: 100%;
+  overflow: hidden;
+  background-color: rgb(188, 236, 48);
+}
+.scroll-bar__block {
   height: 90px;
   box-sizing: border-box;
   border: 1px solid rgba(255, 255, 255, 0.2);
@@ -71,6 +76,29 @@
           backdrop-filter: blur(50px);
   background: rgb(188, 236, 48);
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  gap: 51px;
+  animation: scroll-left 10s linear infinite;
+}
+.scroll-bar__star {
+  width: 36px;
+  height: 36px;
+  padding: 27px;
+}
+.scroll-bar__title {
+  height: 33px;
+  color: rgb(32, 32, 39);
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 110%;
+  letter-spacing: 4%;
+  text-align: left;
+  text-transform: uppercase;
+  display: flex;
+  white-space: nowrap;
+  padding: 27px;
 }
 
 .info {
@@ -645,5 +673,13 @@
   }
   .game-play__flex {
     align-items: center;
+  }
+}
+@keyframes scroll-left {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
   }
 }/*# sourceMappingURL=style.css.map */
