--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+.html {
+  scroll-behavior: smooth;
+}
+
 .body {
   font-family: "Montserrat", sans-serif;
 }
@@ -64,9 +68,13 @@
 }
 
 .scroll-bar {
-  max-width: 100%;
+  max-width: 200%;
   overflow: hidden;
   background-color: rgb(188, 236, 48);
+  -webkit-backdrop-filter: blur(50px);
+          backdrop-filter: blur(50px);
+  box-sizing: border-box;
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 .scroll-bar__block {
   height: 90px;
@@ -87,6 +95,7 @@
   padding: 27px;
 }
 .scroll-bar__title {
+  max-width: 100%;
   height: 33px;
   color: rgb(32, 32, 39);
   font-family: "Montserrat", sans-serif;
@@ -414,6 +423,26 @@
   .scroll-bar {
     height: 51px;
     position: relative;
+  }
+  .scroll-bar__star {
+    width: 19.34px;
+    height: 19.34px;
+    padding: 17px;
+  }
+  .scroll-bar__title {
+    height: 18px;
+    color: rgb(32, 32, 39);
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 110%;
+    letter-spacing: 4%;
+    text-align: left;
+    text-transform: uppercase;
+    padding: 17px;
+  }
+  .scroll-bar__block {
+    gap: 27.4px;
   }
   .header__big-bottom-star {
     position: absolute;
