--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+.html {
+    scroll-behavior: smooth; 
+}
+
 .body {
     font-family: "Montserrat", sans-serif;
 }
@@ -63,9 +67,12 @@
     display: none;
   }
 .scroll-bar {
-    max-width: 100%;
+    max-width: 200%;
     overflow: hidden;
     background-color: rgb(188, 236, 48);
+    backdrop-filter: blur(50px);
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.2);
     &__block {
     height: 90px;
     box-sizing: border-box;
@@ -84,6 +91,7 @@
         padding: 27px;
     }
     &__title {
+        max-width: 100%;
         height: 33px;
         color: rgb(32, 32, 39);
         font-family: "Montserrat", sans-serif;
