--- a/_mobile.scss
+++ b/_mobile.scss
@@ -64,12 +64,12 @@
         background: rgb(32, 32, 39);
         color: rgb(255, 255, 255);
         font-family: "Montserrat", sans-serif;
-        font-size: 24px;
+        font-size: 16px;
         font-weight: 600;
         line-height: 141.69%;
         text-align: center;
         transition: all 0.5s;
-        padding: 10px 20px;
+        padding: 15px 20px;
         text-decoration: none;
         display: inline-block;
     }
@@ -195,10 +195,28 @@
     .game-play__btn {
         width: 285px;
         height: 55px;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 141.69%;
+        letter-spacing: 0%;
+        text-align: center;
     }
 
     .margin {
         margin: 0;
+    }
+
+    .footer {
+        height: 100px;       
+    }
+
+    .footer__text {
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 20px;
+        letter-spacing: 0px;
+        text-align: center;
+        padding-top: 40px;
     }
 
     .footer__big-bottom-star {
@@ -206,6 +224,10 @@
     }
 
     .footer__mini-bottom-star {
+        display: none;
+    }
+
+    .delete-mob {
         display: none;
     }
 
