--- a/_mobile.scss
+++ b/_mobile.scss
@@ -19,9 +19,43 @@
     }
 
     .header__big-star {
+        height: 238.57px;
+        left: 210.81px;
+        top: -79.43px;
         position: absolute;
-        top: -100.43px;
-        right: -90px;
+        display: block;
+    }
+
+    .header__mini-top-star {
+        position: absolute;
+        top: 64px;
+        left: 91px;
+        display: block;
+    }
+
+    .header__big-top-star {
+        position: absolute;
+        top: 97px;
+        left: 37px;
+        display: block;
+    }
+
+    .header__big-bottom-star {
+        position: absolute;
+        width: 39px;
+        height: 41px;
+        left: 304px;
+        top: 580px;
+        display: block;
+    }
+
+    .header__mini-bottom-star {
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        left: 273px;
+        top: 557px;
+        display: block;
     }
 
     .header__subtitle {
@@ -31,18 +65,6 @@
         text-align: center;
         padding-bottom: 36px;
         position: relative;
-    }
-
-    .header__mini-top-star {
-        position: absolute;
-        top: 64px;
-        left: 91px;
-    }
-
-    .header__big-top-star {
-        position: absolute;
-        top: 97px;
-        left: 37px;
     }
 
     .header__box {
@@ -80,12 +102,6 @@
         cursor: pointer;
       }
 
-    .header__mini-bottom-star {
-        position: absolute;
-        bottom: 125px;
-        right: 86px;
-    }
-
     .header__link-box {
         display: flex;
         justify-content: center;
@@ -115,12 +131,6 @@
         gap: 27.4px;
     }
 }
-
-    .header__big-bottom-star {
-        position: absolute;
-        bottom: 79px;
-        right: 34px;
-    }
 
     .info {
         display: none;
