--- a/style.css
+++ b/style.css
@@ -59,10 +59,6 @@
   cursor: pointer;
 }
 
-.header__link-btn-tablet {
-  display: none;
-}
-
 .header__link-btn-mobile {
   display: none;
 }
@@ -239,12 +235,12 @@
 }
 .game-play__big-top-star {
   position: absolute;
-  right: calc(100vh - 630px);
+  right: calc(50% - 675.09px);
   top: 126px;
 }
 .game-play__mini-top-star {
   position: absolute;
-  right: calc(100vh - 532px);
+  right: calc(50% - 596.21px);
   top: 93px;
 }
 .game-play__title {
@@ -323,12 +319,12 @@
 }
 .footer__mini-bottom-star {
   position: absolute;
-  right: calc(100vh - 532px);
+  right: calc(50% - 570px);
   bottom: 180px;
 }
 .footer__big-bottom-star {
   position: absolute;
-  right: calc(100vh - 630px);
+  right: calc(50% - 668px);
   bottom: 210px;
 }
 .footer__text {
@@ -358,9 +354,39 @@
     padding-top: 147px;
   }
   .header__big-star {
+    height: 238.57px;
+    left: 210.81px;
+    top: -79.43px;
     position: absolute;
-    top: -100.43px;
-    right: -90px;
+    display: block;
+  }
+  .header__mini-top-star {
+    position: absolute;
+    top: 64px;
+    left: 91px;
+    display: block;
+  }
+  .header__big-top-star {
+    position: absolute;
+    top: 97px;
+    left: 37px;
+    display: block;
+  }
+  .header__big-bottom-star {
+    position: absolute;
+    width: 39px;
+    height: 41px;
+    left: 304px;
+    top: 580px;
+    display: block;
+  }
+  .header__mini-bottom-star {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    left: 273px;
+    top: 557px;
+    display: block;
   }
   .header__subtitle {
     font-size: 16px;
@@ -369,16 +395,6 @@
     text-align: center;
     padding-bottom: 36px;
     position: relative;
-  }
-  .header__mini-top-star {
-    position: absolute;
-    top: 64px;
-    left: 91px;
-  }
-  .header__big-top-star {
-    position: absolute;
-    top: 97px;
-    left: 37px;
   }
   .header__box {
     display: flex;
@@ -411,11 +427,6 @@
     color: rgb(32, 32, 39);
     cursor: pointer;
   }
-  .header__mini-bottom-star {
-    position: absolute;
-    bottom: 125px;
-    right: 86px;
-  }
   .header__link-box {
     display: flex;
     justify-content: center;
@@ -443,11 +454,6 @@
   }
   .scroll-bar__block {
     gap: 27.4px;
-  }
-  .header__big-bottom-star {
-    position: absolute;
-    bottom: 79px;
-    right: 34px;
   }
   .info {
     display: none;
@@ -546,10 +552,48 @@
     padding-left: calc(50% - 384px);
     padding-right: calc(50% - 384px);
   }
+  .header {
+    background-image: none;
+  }
   .header__title {
     font-size: 56px;
     font-weight: 700;
     line-height: 60px;
+  }
+  .header__big-star {
+    height: 238.57px;
+    left: 610px;
+    top: -79.43px;
+    position: absolute;
+    display: block;
+  }
+  .header__mini-top-star {
+    position: absolute;
+    top: 64px;
+    left: 91px;
+    display: block;
+  }
+  .header__big-top-star {
+    position: absolute;
+    top: 97px;
+    left: 37px;
+    display: block;
+  }
+  .header__big-bottom-star {
+    position: absolute;
+    width: 39px;
+    height: 41px;
+    left: 604px;
+    top: 580px;
+    display: block;
+  }
+  .header__mini-bottom-star {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    left: 573px;
+    top: 557px;
+    display: block;
   }
   .header__link-box {
     display: flex;
@@ -577,6 +621,7 @@
   }
   .info {
     height: 3850px;
+    background-image: none;
   }
   .games-box {
     display: flex;
@@ -600,6 +645,12 @@
   .games-box__column {
     row-gap: 24px;
     padding-top: 24px;
+  }
+  .game-play__big-top-star {
+    display: none;
+  }
+  .game-play__mini-top-star {
+    display: none;
   }
   .game-play__product {
     flex-direction: column;
@@ -634,14 +685,16 @@
   .game-play__flex {
     row-gap: 24px;
     padding-left: 159px;
+    width: 445px;
   }
   .margin {
     margin-bottom: 64px;
   }
-  .footer__mini-bottom-star {
-    position: absolute;
-    right: calc(100vh - 532px);
-    bottom: 160px;
+  .footer {
+    height: 100px;
+  }
+  .footer__text {
+    padding-top: 40px;
   }
 }
 @media (min-width: 1024px) and (max-width: 1439px) {
